# stardetector

./: .gitignore  Cargo.toml
src/: centroid.rs  lib.rs  main.rs  threshold.rs
